# ##########################################################
# Package

[package]

authors = [
	"Matt Wilson <matthew@synesis.com.au>",
]
categories = [
	"config",
	"encoding",
	"no-std",
	"parsing",
	"text-processing",
]
description = "Simple Rust library determining whether strings indicate truey or falsy values"
documentation = "https://github.com/synesissoftware/to-be.Rust/README.md"
edition = "2021"
homepage = "https://github.com/synesissoftware/to-be.Rust"
keywords = [
	"configuration",
	"environment",
	"string",
	"traits",
]
license = "BSD-3-Clause"
name = "to-be"
repository = "https://github.com/synesissoftware/to-be.Rust"
version = "0.0.4"


# ##########################################################
# Targets


# ##########################################################
# Features

[features]

default = [
	# "implement-Truthy-for-AsStr",
	"implement-Truthy-for-bool",
	"implement-Truthy-for-str",
	"implement-Truthy-for-String",
]


# General features:
#
# - "null-feature" - a feature that has no effect (and, thus, is useful for simplifying driver scripts);

null-feature = []


# Crate-specific features:
#
# "implement-Truthy-for-AsStr" - implements `Truthy` for all types that implement `AsStr`. NOTE: this is incompatible with the other features that pertain to concrete types;
# "implement-Truthy-for-bool" - implements `Truthy` for `bool` type;
# "implement-Truthy-for-str" - implements `Truthy` for `&str` type;
# "implement-Truthy-for-String" - implements `Truthy` for `String` type;

implement-Truthy-for-AsStr = []
implement-Truthy-for-bool = []
implement-Truthy-for-str = []
implement-Truthy-for-String = []


# ##########################################################
# Dependencies

[dependencies]

base-traits = { version = "0", default-features = false, features = [
	"implement-AsStr-for-built_ins",
]}


[dev-dependencies]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

